--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									Nate Washington
+									Nathanael Washington
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Data Analyst <br> Welcome to my Portfolio!
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -71,16 +71,16 @@
 									<!-- 	Note that this links to #about, which will move the page to wherever
 										the element with the id "about" exists.
 									-->
-									<a href="#about">About Me</a>
+									<a href="#Intro">Intro</a>
 								</li>
 								<li>
-									<a href="#research">Research</a>
+									<a href="#Projects">Projects</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="#About">About Me</a>
 								</li>
 								<li>
-									<a href="#contact">Contact</a>
+									<a href="#Contact">Contact</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
