--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/100.jpg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
-							</p>
+							</p> Thinkful
 							<p>
 								<b>Research Interests:</b>
 							</p>
