--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							button links to.
 						-->
 						<article id="about">
-							<h2 class="major">About Me</h2>
+							<h2 class="major">Intro</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
 								<img src="images/100.jpg" alt=""/>
@@ -117,8 +117,8 @@
 						</article>
 
 						<!-- Here is the "Research" card. -->
-						<article id="research">
-							<h2 class="major">Research</h2>
+						<article id="Projects">
+							<h2 class="major">Project</h2>
 							<span class="image main">
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
@@ -134,8 +134,8 @@
 						</article>
 
 						<!-- Here is the "Community" card. -->
-						<article id="community">
-							<h2 class="major">Community</h2>
+						<article id="About">
+							<h2 class="major">About</h2>
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
@@ -151,10 +151,10 @@
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
-						<article id="contact">
+						<article id="Contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>nwashington8807@gmail.com:</b> 
 							</p>
 							<p> 
 								<b>Address:</b> 
