--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<!-- 	Here is the "About Me" card. Note it has the id "about", which the previous 
 							button links to.
 						-->
-						<article id="about">
+						<article id="Intro">
 							<h2 class="major">Intro</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
