--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/7-best-practices-for-database-security.png" style="width:438px; height:748px; object-fit: cover;">
+								<img src="images/guillaume-techer-oMxq_6MBmNE-unsplash" style="width:640px; height:340px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
