--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/DSCN0009.jpg" target="_blank"></a>
+									<a href="images/guillaume-techer-oMxq_6MBmNE-unsplash.jpg" target="_blank"></a>
 								</p>
 							</div>
 						</div>
