--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									another List Item with a link inside of it.
 								-->
 								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
+									<a href="images/portbg.jpg">My CV</a>
 								</li> -->
 							</ul>
 						</nav>
@@ -108,6 +108,9 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
 							</p> Thinkful
+							•	Data analytics extraction and presentation of actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases
+•	Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and Python for data analysis
+
 							<p>
 								<b>Research Interests:</b>
 							</p>
