--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
 							</p> Thinkful
-							•	Data analytics extraction and presentation of actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases
-•	Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and Python for data analysis
+							Data analytics extraction and presentation of actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases	
+							Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and Python for data analysis
 
 							<p>
 								<b>Research Interests:</b>
