--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
 							</p> Thinkful
+							
 							Data analytics extraction and presentation of actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases	
 							Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and Python for data analysis
 
@@ -143,7 +144,11 @@
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
 							<p>
-								<b>Teaching:</b>
+								<b>Dedicated Data Analyst with a zeal for learning about new things, breaking them down and seeing what makes it work. 
+								My experience in industrial & manufacturing supply chain has shown that data is a critical and necessary tool to improve productivity and efficiency,
+								Technical skills - SQL Python Tableau Advanced Excel R
+								In my free time I enjoy spending time with friends and family, working out, all things outdoors, modern art and freshwater aquatic husbandry.
+								Always looking to further develop my analytics skills and for opportunities where data is used to affect decision making at the executive level. </b>
 							</p>
 							<p>
 								<b>Outreach:</b>
