--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
 					<!-- This is where the content that appears on page load exists -->
 					<header id="header">
+						<div class="logo">
+							<span class="icon fa-database"></span>
+						</div>
 						<!-- This is the main content of the front page -->
 						<div class="content">
 							<div class="inner">
