--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 					<!-- This is where the content that appears on page load exists -->
 					<header id="header">
-						<div class="logo">
+						<div class="logo">==$0
 							<span class="icon fa-database">...</span>
 						</div>
 						<!-- This is the main content of the front page -->
