--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 					<!-- This is where the content that appears on page load exists -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-database"></span>
-							::before
+							<span class="icon fa-database">
+								::before
+							</span>	
 						</div>
 						<!-- This is the main content of the front page -->
 						<div class="content">
