--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<!-- This is where the content that appears on page load exists -->
 					<header id="header">
 						<div class="logo">
-							<span class=<img src="database-5-125.png" style="width:128px; height:128px; object-fit: cover;">>	
+							<span class=<=>	
 							</span>	
 						</div>
 						<!-- This is the main content of the front page -->
