--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Discount Mart Sales Analytics</b><br>https://public.tableau.com/profile/nathanael.washington#!/vizhome/DiscountMartDashboards/Dashboard1
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
