--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
-								-->
-								<b>Discount Mart Sales Analytics</b><br>https://public.tableau.com/profile/nathanael.washington#!/vizhome/DiscountMartDashboards/Dashboard1
+								--><br>
+								<a href="Discount Mart Sales Analytics</b><br>https://public.tableau.com/profile/nathanael.washington#!/vizhome/DiscountMartDashboards/Dashboard1"> 
+									Discount Mart Dashboard </a>
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
