--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								--><br>
-								<a href="Discount Mart Sales Analytics</b><br>https://public.tableau.com/profile/nathanael.washington#!/vizhome/DiscountMartDashboards/Dashboard1"> 
-									Discount Mart Dashboard </a>
+								<a href="https://public.tableau.com/profile/nathanael.washington#!/vizhome/DiscountMartDashboards/Dashboard1"> 
+									Discount Mart Dashboard Analytics</a>
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
