--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</p> Thinkful
 							
 							Data analytics extraction and presentation of actionable insights that deliver business value from common data sources like Excel, CSV files, and SQL databases	
-							Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and Python for data analysis
+							Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and coding in Python for data analysis
 
 							<p>
 								<b>Research Interests:</b>
