--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 							Practical mastery of Excel, PowerPoint, PostgreSQL, Tableau, and coding in Python for data analysis
 
 							<p>
-								<b>Research Interests:</b>
-							</p>
+								<b>Research Interests:</b> 
+							</p> Finance, Machine Learning, Marketing, Sports Analytics
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								</a>
 							</p>
 						</article>
 
