--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 							<p>
 								<b>Research Interests:</b> 
-							</p> Finance, Machine Learning, Marketing, Sports Analytics
+							</p> Finance, Conservation, Marketing, Sports Analytics
 							<p>
 								</a>
 							</p>
@@ -138,10 +138,13 @@
 									Discount Mart Dashboard </a>
 							</p>
 							<p>
+								<a href="https://public.tableau.com/profile/nathanael.washington#!/vizhome/GreenDestinationsHRAnalytics_16142838242130/Dashboard1"> 
+									Green Destination HR Analytics Dashboard</a>
+							</p>
+							<p>
 								<a href="https://drive.google.com/file/d/1W9lmhxhJMkAUf82oL-ARArfxO0qc3_27/view?usp=sharing"> 
 									Excel Housing Price Statistical Analysis </a>
 							</p>
-							
 							<p>
 								<a href="https://colab.research.google.com/drive/1zt5VjE34Wi5hNtMI91tV40_cjCLKeJX4?usp=sharing"> 
 									Python notebook of Statistical Analysis of Airbnb Properties </a>
