--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<article id="Projects">
 							<h2 class="major">Project</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/photo-1528413538163-0e0d91129480.jpg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
