--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 						<!-- Here is the "Projects" card. -->
 						<article id="Projects">
-							<h2 class="major">Project</h2>
+							<h2 class="major">Projects</h2>
 							<span class="image main">
 								<img src="images/1_U2_nrr1ocs70ypKBEffcpQ.jpeg" alt=""/>
 							</span>
