--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 						<!-- Here is the "About Me" card. -->
 						<article id="About Me">
-							<h2 class="major">About</h2>
+							<h2 class="major">About Me</h2>
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
