--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						<article id="About Me">
 							<h2 class="major">About Me</h2>
 							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
+								<img src="images/20201012_112837.jpg" alt=""/>
 							</span>
 							<p>
 								<b>Results-driven Data Analyst focused on operational efficiency, cost reduction, and leveraging large datasets to help guide better business decisions. Proven success in the supply chain logistics and manufacturing carrying out root cause analysis, data visualization, data forecasting, data pipeline, data manipulation, and data management. 
