--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
 									Green Destination HR Analytics Dashboard</a>
 							</p>
 							<p>
+								<a href="https://public.tableau.com/profile/nathanael.washington#!/vizhome/SuperstoreSalesAgentTracker_16206731331140/Dashboard1?publish=yes"> 
+									Superstore Sales Agent Tracker</a>
+							</p>
+							<p>
 								<a href="https://drive.google.com/file/d/1W9lmhxhJMkAUf82oL-ARArfxO0qc3_27/view?usp=sharing"> 
 									Excel Housing Price Statistical Analysis </a>
 							</p>
