--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									Green Destination HR Analytics Dashboard</a>
 							</p>
 							<p>
-								<a href="https://public.tableau.com/profile/nathanael.washington#!/vizhome/SuperstoreSalesAgentTracker_16206731331140/Dashboard1?publish=yes"> 
+								<a href="https://public.tableau.com/profile/nathanael.washington#!/vizhome/SuperstoreSalesAgentTracker_16206731331140/Dashboard1"> 
 									Superstore Sales Agent Tracker</a>
 							</p>
 							<p>
