--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<a href="#Projects">Projects</a>
 								</li>
 								<li>
-									<a href="#About Me">About Me</a>
+									<a href="#About">About Me</a>
 								</li>
 								<li>
 									<a href="#Contact">Contact</a>
@@ -166,7 +166,7 @@
 
 						<!-- Here is the "About Me" card. -->
 						<article id="About Me">
-							<h2 class="major">About Me</h2>
+							<h2 class="major">About</h2>
 							<span class="image main">
 								<img src="images/20201012_112837.jpg" alt=""/>
 							</span>
