--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<a href="#Projects">Projects</a>
 								</li>
 								<li>
-									<a href="#About">About Me</a>
+									<a href="#About">About</a>
 								</li>
 								<li>
 									<a href="#Contact">Contact</a>
